Prevent help modal overflow

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1272,14 +1272,22 @@ modal-body {
   }
 }
 
-// XXX: Same as .search-result ?
-.help.story-line {
-  font-size: small;
-  cursor: pointer;
-  border: 1px solid $gray-light;
-  margin-bottom: 10px;
-  padding: 10px;
-  box-shadow: 2px 2px 2px $brand-accent-light;
+.help-selection {
+
+  .modal-body {
+    height: calc(100vh - 200px);
+    overflow-y: auto;
+  }
+
+  // XXX: Same as .search-result ?
+  .help.story-line {
+    font-size: small;
+    cursor: pointer;
+    border: 1px solid $gray-light;
+    margin-bottom: 10px;
+    padding: 10px;
+    box-shadow: 2px 2px 2px $brand-accent-light;
+  }
 }
 
 a.accordion-toggle {
